<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gold"
        android:orientation="vertical"
        tools:context=".screens.about.AboutFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:padding="10dp"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:padding="5dp"
                    android:text="@string/disclaimer"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/image5"
                    android:contentDescription="@string/random_beer_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:padding="5dp"
                    android:text="@string/fun_fact1"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/image4"
                    android:contentDescription="@string/random_beer_image"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:padding="5dp"
                    android:text="@string/fun_fact2"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/image3"
                    android:contentDescription="@string/random_beer_image"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:padding="5dp"
                    android:text="@string/fun_fact3"
                    android:textColor="@color/black"
                    android:textSize="12sp" />


            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>