<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/indigo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:contentDescription="@string/random_beer_image"
                android:src="@drawable/image4" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/login"
                android:textColor="@color/colorAccent"
                android:textSize="26sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeTextInputLayoutBoxStroke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/email"
                android:textColorHint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmailSignin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorAccent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeTextInputLayoutBoxStroke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/password"
                android:textColorHint="@color/colorAccent"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPasswordSignin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/colorAccent" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonSignin"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/login"
                android:textColor="@color/white"
                app:strokeColor="@color/colorAccent" />

            <Button
                android:id="@+id/buttonSignUp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                app:strokeColor="@color/colorAccent" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>