<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="breweryDetailViewModel"
            type="be.heb.g48982.myfirstapp.viewmodel.BreweryDetailViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gold"
        android:orientation="horizontal"

        tools:context=".ui.BreweryDetailFragment">

        <ImageView
            android:id="@+id/random_beerImage"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/image5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/random_beer_image" />

        <TextView
            android:id="@+id/brewery_Name"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/comfortaabold"
            android:textStyle="italic"
            app:breweryNameString="@{breweryDetailViewModel.currentBrewery}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/random_beerImage" />

        <TextView
            android:id="@+id/street_Name"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto"
            app:breweryStreetString="@{breweryDetailViewModel.currentBrewery}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brewery_Name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutReview"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/add_review"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:endIconDrawable="@drawable/ic_check_circle"
            app:endIconMode="custom"
            app:errorIconDrawable="@drawable/ic__error"
            app:helperText="add review here"
            app:helperTextTextColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/street_Name"
            app:startIconDrawable="@drawable/ic_review">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLength="51"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button

            android:id="@+id/btn_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="16dp"
            android:text="@string/all_reviews"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutReview"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>